feat: hello, world web site

--- a/docs/configs/lab-r6-base.conf
+++ b/docs/configs/lab-r6-base.conf
@@ -8,8 +8,8 @@ set interfaces ge-0/0/1 unit 16 vlan-id 16
 set interfaces ge-0/0/1 unit 16 family mpls
 set interfaces ge-0/0/1 unit 16 family inet address 172.16.16.6/24
 set protocols ospf area 0 interface lo0.0 passive
-set protocols ospf area 0 interface ge-0/0/0.67
-set protocols ospf area 0 interface ge-0/0/1.16
+set protocols ospf area 0 interface ge-0/0/0.67 interface-type p2p
+set protocols ospf area 0 interface ge-0/0/1.16 interface-type p2p
 set protocols ospf traffic-engineering
 set protocols mpls interface ge-0/0/0.67
 set protocols mpls interface ge-0/0/1.16
