--- a/docs/configs/lab-r7-base.conf
+++ b/docs/configs/lab-r7-base.conf
@@ -8,8 +8,8 @@ set interfaces ge-0/0/1 unit 78 vlan-id 78
 set interfaces ge-0/0/1 unit 78 family mpls
 set interfaces ge-0/0/1 unit 78 family inet address 172.16.78.7/24
 set protocols ospf area 0 interface lo0.0 passive
-set protocols ospf area 0 interface ge-0/0/0.67
-set protocols ospf area 0 interface ge-0/0/1.78
+set protocols ospf area 0 interface ge-0/0/0.67 interface-type p2p
+set protocols ospf area 0 interface ge-0/0/1.78 interface-type p2p
 set protocols ospf traffic-engineering
 set protocols mpls interface ge-0/0/0.67
 set protocols mpls interface ge-0/0/1.78
