--- a/docs/configs/lab-r2-base.conf
+++ b/docs/configs/lab-r2-base.conf
@@ -8,8 +8,8 @@ set interfaces ge-0/0/1 unit 23 vlan-id 23
 set interfaces ge-0/0/1 unit 23 family mpls
 set interfaces ge-0/0/1 unit 23 family inet address 172.16.23.2/24
 set protocols ospf area 0 interface lo0.0 passive
-set protocols ospf area 0 interface ge-0/0/0.12
-set protocols ospf area 0 interface ge-0/0/1.23
+set protocols ospf area 0 interface ge-0/0/0.12 interface-type p2p
+set protocols ospf area 0 interface ge-0/0/1.23 interface-type p2p
 set protocols ospf traffic-engineering
 set protocols mpls interface ge-0/0/0.12
 set protocols mpls interface ge-0/0/1.23
