--- a/docs/configs/lab-r4-base.conf
+++ b/docs/configs/lab-r4-base.conf
@@ -8,8 +8,8 @@ set interfaces ge-0/0/1 unit 45 vlan-id 45
 set interfaces ge-0/0/1 unit 45 family mpls
 set interfaces ge-0/0/1 unit 45 family inet address 172.16.45.4/24
 set protocols ospf area 0 interface lo0.0 passive
-set protocols ospf area 0 interface ge-0/0/0.34
-set protocols ospf area 0 interface ge-0/0/1.45
+set protocols ospf area 0 interface ge-0/0/0.34 interface-type p2p
+set protocols ospf area 0 interface ge-0/0/1.45 interface-type p2p
 set protocols ospf traffic-engineering
 set protocols rsvp interface ge-0/0/0.34
 set protocols rsvp interface ge-0/0/1.45
